test/sema/typeck/method/method-defined-twice-2.dora
class Foo
impl Foo{
    fn bar() {}
    fn bar(): Int32 { 0 }
}
